# dscft

./: CMakeLists.txt  Gmake  Makefile  Start  cmake_install.cmake  game.start  graphic.py  out.txt  task_format.txt
include/: algorithms.h  defines.h  parser.h  sortings.h  types.h  wtime.h
results/: FFDH_1152N.txt  NFDH_1152N.txt
src/: 2dpacking.c  algorithms.c  atlas.c  lab3.cpp  parser.c  sortings.c  wtime.c
